update docs for new version